changed title, description, and keywords

--- a/mattrb.com/index.html
+++ b/mattrb.com/index.html
@@ -4,8 +4,8 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="I make stuff and sometimes it works.">
-    <meta name="keywords" content="Matt, Matthew, Berry, Matt Berry, Matthew Berry">
+    <meta name="description" content="I enjoy working on various projects in the field of computer science. I make stuff and sometimes it works.">
+    <meta name="keywords" content="Matt, Matthew, Berry, Matt Berry, Matthew Berry, mattrb">
     <meta name="theme-color" content="#2D2D37">
 
     <!--<link id="pagestyle" type="text/css" rel="stylesheet" href="static/css/animate.css">-->
@@ -23,7 +23,7 @@
     <script src="js/snow.js"></script>
     <script>window.onload = snow;</script>
 
-    <title>Matt Berry</title>
+    <title>Matthew Berry</title>
   </head>
 
   <body>
