experimenting with slim

--- a/mattrb.com/index.html
+++ b/mattrb.com/index.html
@@ -1,99 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="I enjoy working on various projects in the field of computer science. I make stuff and sometimes it works.">
-    <meta name="keywords" content="Matt, Matthew, Berry, Matt Berry, Matthew Berry, mattrb">
-    <meta name="theme-color" content="#2D2D37">
-
-    <!--<link id="pagestyle" type="text/css" rel="stylesheet" href="static/css/animate.css">-->
-    <link id="pagestyle" type="text/css" rel="stylesheet" href="/css/styles.css">
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-    <script type="text/javascript" src="/js/scroll.js"></script>
-
-    <link rel="icon" href="/img/favicon.ico?v=2">
-
-    <link href="https://fonts.googleapis.com/css?family=Hind|Lato|Montserrat|Varela+Round" rel="stylesheet">
-
-    <meta name="google-site-verification" content="-HvV-RPpSFDJ0AqLbi1rj9kb-UGC8-Vq_kx_ZuuYaJc" />
-
-    <script src="js/snow.js"></script>
-    <script>window.onload = snow;</script>
-
-    <title>Matthew Berry</title>
-  </head>
-
-  <body>
-    <canvas id="snow" style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:-1"></canvas>
-    <div class="full middle-div" id="splash">
-      <div class="middle-div">
-        <h4 class="no-wrap">Hi, I'm Matt.</h4>
-        <p class="no-wrap">I make stuff and sometimes it works.</p>
-        <div class="social" id="social-top">
-          <div>
-            <a href="https://github.com/mattrberry"><img src="/img/github.svg" height="32px"></a>
-            <a href="https://twitter.com/mattrossberry"><img src="/img/twitter.svg" height="32px"></a>
-            <a href="https://www.facebook.com/mattrossberry"><img src="/img/facebook.svg" height="32px"></a>
-            <a href="mailto:me@mattrb.com"><img src="/img/email.svg" height="32px"></a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="bounce-me down-arrow">
-      <a id="main-arrow" class="arrow" href="#projects"></a>
-    </div>
-    <div id="projects">
-      <div>
-        <h4>Some Stuff I've Done</h4>
-        <div>
-          <div id="csgo-stats">
-            <div>
-              <img src="/img/karambit-fit.png" height="50px">
-              <br><br>
-              <h5>CSGO Skin Stats</h5>
-              <br>
-              <p>Built a website to cleanly and efficiently display any CSGO players' public inventory.</p>
-              <br>
-              <a href="https://csgo.mattrb.com">csgo.mattrb.com</a>
-            </div>
-          </div>
-          <div id="mvcode">
-            <div>
-              <img src="/img/mvcode.png" height="50px">
-              <br><br>
-              <h5>MVCode</h5>
-              <br>
-              <p>Worked at MVCode to teach programming concepts to kids in 1st through 8th grade.</p>
-              <br>
-              <a href="https://www.mvcodeclub.com">www.mvcodeclub.com</a>
-            </div>
-          </div>
-          <div id="neu">
-            <div>
-              <img src="/img/neu-fit.png" height="50px">
-              <br><br>
-              <h5>Northeastern University</h5>
-              <br>
-              <p>Currently studying computer science at Northeastern University in Boston, Massachussetts.</p>
-              <br>
-              <a href="https://www.northeastern.edu">www.northeastern.edu</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="social" id="social-bottom">
-      <div>
-        <a href="https://github.com/mattrberry"><img src="/img/github.svg" height="32px"></a>
-        <a href="https://twitter.com/mattrossberry"><img src="/img/twitter.svg" height="32px"></a>
-        <a href="https://www.facebook.com/mattrossberry"><img src="/img/facebook.svg" height="32px"></a>
-        <a href="mailto:me@mattrb.com"><img src="/img/email.svg" height="32px"></a>
-      </div>
-    </div>
-    <p id="back-top"><a href="#top"><span></span></a></p>
-  </body>
-
-</html>
+<!DOCTYPE html><html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="I enjoy working on various projects in the field of computer science. I make stuff and sometimes it works."/><meta name="keywords" content="Matt, Matthew, Berry, Matt Berry, Matthew Berry, mattrb"/><meta name="theme-color" content="#2D2D37"/><link id="pagestyle" type="text/css" rel="stylesheet" href="css/styles.css"/><script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js">
+</script><script type="text/javascript" src="js/scroll.js">
+</script><link rel="icon" href="img/favicon.ico?v=2"/><link href="https://fonts.googleapis.com/css?family=Hind|Lato|Montserrat|Varela+Round" rel="stylesheet"/><meta name="google-site-verification" content="-HvV-RPpSFDJ0AqLbi1rj9kb-UGC8-Vq_kx_ZuuYaJc"/><script src="js/snow.js">
+</script><script>window.onload = snow;
+</script><title>Matthew Berry</title></head><body><canvas id="snow" style="position:absolute;top:0;left:0;width:100%;height:100%;z-index:-1"></canvas><div id="splash" class="full middle-div"><div class="middle-div"><h4 class="no-wrap">Hi, I'm Matt.</h4><p class="no-wrap">I make stuff and sometimes it works.</p><div id="social-top" class="social"><div><a href="https://github.com/mattrberry"><img src="/img/github.svg" height="32px"/></a><a href="https://twitter.com/mattrossberry"><img src="/img/twitter.svg" height="32px"/></a><a href="https://www.facebook.com/mattrossberry"><img src="/img/facebook.svg" height="32px"/></a><a href="mailto:me@mattrb.com"><img src="/img/email.svg" height="32px"/></a></div></div></div></div><div class="bounce-me down-arrow"><a id="main-arrow" href="#projects" class="arrow"></a></div><div id="projects"><div><h4>Some Stuff I've Done</h4><div><div id="csgo-stats"><div><img src="/img/karambit-fit.png" height="50px"/><br/><br/><h5>CSGO Skin Stats</h5><br/><p>Built a website to cleanly and efficiently display any CSGO players' public inventory.</p><br/><a href="https://csgo.mattrb.com">csgo.mattrb.com</a></div></div><div id="mvcode"><div><img src="/img/mvcode.png" height="50px"/><br/><br/><h5>MVCode</h5><br/><p>Worked at MVCode to teach programming concepts to kids in 1st through 8th grade.</p><br/><a href="https://www.mvcodeclub.com">www.mvcodeclub.com</a></div></div><div id="neu"><div><img src="/img/neu-fit.png" height="50px"/><br/><br/><h5>Northeastern University</h5><br/><p>Currently studying computer science at Northeastern University in Boston, Massachussetts.</p><br/><a href="https://www.northeastern.edu">www.northeastern.edu</a></div></div></div></div></div><div id="social-bottom" class="social"><div><a href="https://github.com/mattrberry"><img src="/img/github.svg" height="32px"/></a><a href="https://twitter.com/mattrossberry"><img src="/img/twitter.svg" height="32px"/></a><a href="https://www.facebook.com/mattrossberry"><img src="/img/facebook.svg" height="32px"/></a><a href="mailto:me@mattrb.com"><img src="/img/email.svg" height="32px"/></a></div></div><p id="back-top"><a href="#top"><span></span></a></p></body></html>
