added temporary shutdown banner

--- a/csgo.mattrb.com/index.html
+++ b/csgo.mattrb.com/index.html
@@ -26,6 +26,9 @@
       <h1 style="cursor:default">
         CSGO Skin Stats
       </h1>
+      <h2 style="color:#EF5350;text-align:center">
+        Valve shut down the old API. I am in the process of switching to the new one.
+      </h2>
     </div>
     <form autocomplete="off" id="input" method="post" name="input">
       <input accesskey="n" id="textbox" name="id" onClick="this.select();" placeholder="Profile URL or Inspect Link" title="Enter profile URL, inspect link, vanity URL, or SteamID64 to search. Use Alt-N on Windows or Ctrl-Alt-N on Mac to focus on input." type="text" /><br /><input id="button" style="cursor:pointer" type="button" value="Check" />
