--- a/mattrb.com/index.html
+++ b/mattrb.com/index.html
@@ -5,6 +5,8 @@
     <meta name="description" content="I am a first-year student at Northeastern University studying computer science.">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+
+    <link rel="apple-touch-icon" href="img/apple-icon.png">
   </head>
   <body>
     <div class="container">
